--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8730,205 +8730,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #c4110d; }
+  background: #c7db32; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #d53105; }
+  background: #6e4806; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #b5090a; }
+  background: #61c127; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #22d983; }
+  background: #642f88; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #a7c7ae; }
+  background: #2568ea; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #239137; }
+  background: #c91313; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #6b1e55; }
+  background: #3980cd; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #a00f2c; }
+  background: #83b691; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #a8d439; }
+  background: #5ec2ca; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #375fb1; }
+  background: #75f495; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #ac8a17; }
+  background: #efeb8f; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #2b0a9e; }
+  background: #ac94fd; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #425f21; }
+  background: #905876; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #85d6ed; }
+  background: #8308b0; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #a7c27c; }
+  background: #ce5b99; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #82922a; }
+  background: #8a0fc6; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #bc1646; }
+  background: #fadbf6; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #1ccc04; }
+  background: #3438de; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #fd0887; }
+  background: #2c3bfa; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #d95dc1; }
+  background: #27bbe3; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #692498; }
+  background: #bc15e2; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #c9dea2; }
+  background: #3baadd; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #939626; }
+  background: #b5d2ce; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #979dd6; }
+  background: #28f40e; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #3ef040; }
+  background: #90e63f; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #e090cb; }
+  background: #e41e8b; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #4cbd49; }
+  background: #21cacd; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #103926; }
+  background: #64e391; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #c8b82f; }
+  background: #86700a; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #9346b6; }
+  background: #4f44ba; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #48fd47; }
+  background: #ff1799; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #09d92c; }
+  background: #6f76be; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #af01e9; }
+  background: #12868e; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #929f11; }
+  background: #04eecc; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #7f9f12; }
+  background: #e20944; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #4ab47f; }
+  background: #d07966; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #c58161; }
+  background: #690e70; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #8bc1d1; }
+  background: #7427c3; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #0843bf; }
+  background: #96222c; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #26655f; }
+  background: #f2b823; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #d827b2; }
+  background: #03c3f2; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #0d496e; }
+  background: #bba9a3; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #cb0691; }
+  background: #94a7dd; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #e3143d; }
+  background: #fca94c; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #6212e4; }
+  background: #26342b; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #a87a08; }
+  background: #02e2ab; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #438c56; }
+  background: #0fb63c; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #d7d4e7; }
+  background: #4c28db; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #18eeda; }
+  background: #5dfe51; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #d7f715; }
+  background: #b91d5d; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #567941; }
+  background: #2e2686; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #762737; }
+  background: #feec52; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #5e4bfd; }
+  background: #c04a84; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #545921; }
+  background: #f33044; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #ccc364; }
+  background: #baa272; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #a433f3; }
+  background: #de060e; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #3863df; }
+  background: #6e8af6; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #9446c1; }
+  background: #37cbff; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #16b77b; }
+  background: #8df2ce; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #2a6f9f; }
+  background: #dfa536; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #a103c9; }
+  background: #999309; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #a64d11; }
+  background: #edcdb0; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #79d4f4; }
+  background: #3c78ea; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #7f65d9; }
+  background: #2b9302; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #fb6286; }
+  background: #76adc4; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #c6c00a; }
+  background: #76109a; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #c074af; }
+  background: #622ac3; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #756219; }
+  background: #8d2f91; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #802c60; }
+  background: #b0e5ad; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #6bbd0c; }
+  background: #1815bb; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #1a3c57; }
+  background: #84d8e5; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #6720e8; }
+  background: #b6a7fb; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #35bf2d; }
+  background: #ae07d5; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #22d9e8; }
+  background: #be65e8; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #b539d1; }
+  background: #daa8b1; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #66787c; }
+  background: #f1b097; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #1209c1; }
+  background: #d83d4b; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #97f190; }
+  background: #b51572; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #2bfdee; }
+  background: #b98b0c; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #fc1f8b; }
+  background: #efae23; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #98b289; }
+  background: #0aae65; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #84b059; }
+  background: #af782c; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #a710a2; }
+  background: #2f1424; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #c55f26; }
+  background: #d68d67; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #3feb1f; }
+  background: #046c21; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #29e39f; }
+  background: #a70788; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #7d7ced; }
+  background: #445543; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #f30950; }
+  background: #269773; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #e2e38b; }
+  background: #13684d; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #9fe44e; }
+  background: #c636b9; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #5f207e; }
+  background: #1985f3; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #f09e3c; }
+  background: #494875; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #bc4345; }
+  background: #99730c; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #de8dbc; }
+  background: #4957e6; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #046420; }
+  background: #425792; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #9d83f0; }
+  background: #33b9fb; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #77aaeb; }
+  background: #941fb1; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #227fb0; }
+  background: #316c04; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #458344; }
+  background: #ba9ea6; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #1e43bc; }
+  background: #1619b7; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -14590,7 +14590,7 @@ option {
     font-size: 18px;
     margin-top: 15px; }
   .poclicy-center-main-warpper label {
-    font-size: 14px; }
+    font-size: 16px; }
   .poclicy-center-main-warpper .custom-select {
     background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 6'%3e%3cpath fill='%23343a40' d='M2 0L0 0h4zm0 5L0 2h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/10px 20px;
     background-color: rgba(0, 0, 0, 0);
@@ -14622,13 +14622,13 @@ option {
       margin-bottom: 15px;
       width: 100%; }
       .poclicy-center-main-warpper .gray-border-bottom-actions .actions-field-wrapper .min-filed-width {
-        min-width: 400px; }
+        min-width: 450px; }
   .poclicy-center-main-warpper .icons-circle-group {
     display: flex;
     justify-content: space-around;
     align-items: center; }
     .poclicy-center-main-warpper .icons-circle-group a {
-      margin-right: 5px; }
+      margin-right: 15px; }
       .poclicy-center-main-warpper .icons-circle-group a:last-child {
         margin-right: 0px; }
       .poclicy-center-main-warpper .icons-circle-group a img {
