--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8730,205 +8730,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #c7db32; }
+  background: #65460a; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #6e4806; }
+  background: #8123e3; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #61c127; }
+  background: #046e27; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #642f88; }
+  background: #68b8aa; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #2568ea; }
+  background: #172ec1; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #c91313; }
+  background: #6a6e4e; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #3980cd; }
+  background: #9fcae6; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #83b691; }
+  background: #a9ca41; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #5ec2ca; }
+  background: #e2d1bd; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #75f495; }
+  background: #b11c27; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #efeb8f; }
+  background: #d8d69b; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #ac94fd; }
+  background: #c33e6e; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #905876; }
+  background: #7058f9; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #8308b0; }
+  background: #c3698d; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #ce5b99; }
+  background: #b0cb2d; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #8a0fc6; }
+  background: #4f7059; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #fadbf6; }
+  background: #d387df; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #3438de; }
+  background: #2296c8; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #2c3bfa; }
+  background: #42ae8f; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #27bbe3; }
+  background: #9b1bb6; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #bc15e2; }
+  background: #b08f8d; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #3baadd; }
+  background: #edcec1; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #b5d2ce; }
+  background: #bac0fc; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #28f40e; }
+  background: #6d592d; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #90e63f; }
+  background: #09abac; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #e41e8b; }
+  background: #7b8bbc; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #21cacd; }
+  background: #c6599b; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #64e391; }
+  background: #ac52a1; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #86700a; }
+  background: #c69e61; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #4f44ba; }
+  background: #7904f6; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #ff1799; }
+  background: #9915fa; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #6f76be; }
+  background: #ea34d8; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #12868e; }
+  background: #62e973; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #04eecc; }
+  background: #bbd3d1; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #e20944; }
+  background: #4c6af1; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #d07966; }
+  background: #f15ddb; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #690e70; }
+  background: #c872f5; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #7427c3; }
+  background: #7e40b8; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #96222c; }
+  background: #1ac8fc; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #f2b823; }
+  background: #5d84ab; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #03c3f2; }
+  background: #e3b721; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #bba9a3; }
+  background: #dc73ff; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #94a7dd; }
+  background: #0a560e; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #fca94c; }
+  background: #466486; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #26342b; }
+  background: #f0ad0b; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #02e2ab; }
+  background: #5058b5; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #0fb63c; }
+  background: #e9c349; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #4c28db; }
+  background: #6eb45d; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #5dfe51; }
+  background: #089fb7; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #b91d5d; }
+  background: #3e42b9; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #2e2686; }
+  background: #26ac86; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #feec52; }
+  background: #715aba; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #c04a84; }
+  background: #9633af; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #f33044; }
+  background: #38effc; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #baa272; }
+  background: #ffead8; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #de060e; }
+  background: #f4d0cb; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #6e8af6; }
+  background: #322716; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #37cbff; }
+  background: #66ade3; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #8df2ce; }
+  background: #25a5d4; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #dfa536; }
+  background: #f53242; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #999309; }
+  background: #c7bed5; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #edcdb0; }
+  background: #f1a40b; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #3c78ea; }
+  background: #bdd57f; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #2b9302; }
+  background: #31e864; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #76adc4; }
+  background: #d38461; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #76109a; }
+  background: #a92b34; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #622ac3; }
+  background: #fe9536; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #8d2f91; }
+  background: #b90ea3; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #b0e5ad; }
+  background: #5e7e1f; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #1815bb; }
+  background: #c6d4f2; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #84d8e5; }
+  background: #060cee; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #b6a7fb; }
+  background: #0555b4; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #ae07d5; }
+  background: #5d9a56; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #be65e8; }
+  background: #22c2f4; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #daa8b1; }
+  background: #459269; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #f1b097; }
+  background: #4a843c; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #d83d4b; }
+  background: #a08627; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #b51572; }
+  background: #a4e935; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #b98b0c; }
+  background: #1a8804; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #efae23; }
+  background: #de6fdb; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #0aae65; }
+  background: #576efb; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #af782c; }
+  background: #6d9d94; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #2f1424; }
+  background: #3f451b; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #d68d67; }
+  background: #df95e6; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #046c21; }
+  background: #0635d1; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #a70788; }
+  background: #fd9f69; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #445543; }
+  background: #69d7ac; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #269773; }
+  background: #3f0a17; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #13684d; }
+  background: #39d6ac; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #c636b9; }
+  background: #24ed47; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #1985f3; }
+  background: #493597; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #494875; }
+  background: #267ad9; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #99730c; }
+  background: #347e5c; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #4957e6; }
+  background: #d94319; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #425792; }
+  background: #7bc662; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #33b9fb; }
+  background: #e5330d; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #941fb1; }
+  background: #d8aeb5; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #316c04; }
+  background: #aef790; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #ba9ea6; }
+  background: #d26dc5; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #1619b7; }
+  background: #83a02b; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -14601,7 +14601,7 @@ option {
     width: 100%;
     border-bottom: 0.5px solid #9a9a9a;
     margin: 0px 15px 10px;
-    padding-bottom: 20px;
+    padding-bottom: 30px;
     align-items: center; }
     .poclicy-center-main-warpper .gray-border-bottom .form-group {
       width: 100%;
@@ -14619,7 +14619,7 @@ option {
     .poclicy-center-main-warpper .gray-border-bottom-actions .actions-field-wrapper {
       display: flex;
       align-items: center;
-      margin-bottom: 15px;
+      margin-bottom: 25px;
       width: 100%; }
       .poclicy-center-main-warpper .gray-border-bottom-actions .actions-field-wrapper .min-filed-width {
         min-width: 450px; }
